--- a/css/style.css
+++ b/css/style.css
@@ -10728,6 +10728,64 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.row {
+  display: hide;
+}
+
+.header-top a,
+.header-top button {
+  font-size: 0.8rem;
+  font-weight: 400;
+}
+.header-top ul li.active > a, .header-top ul li:hover > a {
+  background-color: #ffaf01;
+  color: black;
+}
+
+.header-main a {
+  text-decoration: none;
+  color: var(--bs-heading-color);
+}
+.header-main .number-color {
+  color: black;
+  background: #ffaf01;
+}
+
+.header-bottom nav ul li .nav-link {
+  padding: 10px 20px;
+  margin-right: 30px;
+}
+.header-bottom nav ul li .sub-menu {
+  display: none;
+}
+.header-bottom nav ul li a {
+  color: white;
+  font-weight: 400;
+}
+.header-bottom nav ul li.active > a, .header-bottom nav ul li:hover > a {
+  background-color: #ffaf01;
+  color: black;
+  font-weight: 500;
+}
+.header-bottom nav ul li.active > .sub-menu, .header-bottom nav ul li:hover > .sub-menu {
+  display: block;
+  position: absolute;
+  left: 100%;
+  top: 0;
+  z-index: 1000;
+  width: 220px;
+  list-style: none;
+  padding-left: 0;
+  text-align: center;
+}
+.header-bottom nav ul li.active > .sub-menu li + li, .header-bottom nav ul li:hover > .sub-menu li + li {
+  border-top: 1px dashed black;
+}
+.header-bottom nav ul li.active > .sub-menu a, .header-bottom nav ul li:hover > .sub-menu a {
+  text-decoration: none;
+  padding: 5px;
+}
+
 .scrollbar-measure {
   width: 100px;
   height: 100px;
@@ -10746,6 +10804,519 @@ Content
   display: none;
 }
 
+.fa-couch {
+  color: #ffaf01;
+}
+
+.section-2 {
+  padding: 30px 0;
+}
+.section-2 .box-inner {
+  position: relative;
+}
+.section-2 .box-inner:hover img,
+.section-2 .box-inner :active img {
+  transform: scale(1.1, 1.1);
+}
+.section-2 .box-inner .image {
+  overflow: hidden;
+  display: block;
+  transition: all 150ms ease-in-out;
+}
+.section-2 .box-inner .image img {
+  width: 100%;
+  height: 700px;
+  object-fit: cover;
+  transition: all 0.4s ease-out;
+  position: relative;
+}
+.section-2 .box-inner .image::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(43, 42, 42) 35%, rgb(90, 90, 90) 100%);
+  background-size: cover;
+  opacity: 0.5;
+}
+.section-2 .box-inner .text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1000;
+  color: white;
+  text-align: center;
+  padding: 0 10px;
+  transform: translate(-50%, -50%);
+}
+.section-2 .box-inner .text h5::after, .section-2 .box-inner .text .h5::after {
+  content: "";
+  border-bottom: 2px solid #fff;
+  display: block;
+  width: 40px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.section-3 {
+  padding: 30px 0;
+}
+.section-3 .fa-couch {
+  color: black;
+}
+.section-3 .section-product .main-menu .menu-title {
+  padding: 10px 10px;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: black;
+  background-color: #ffaf01;
+  margin-bottom: 20px;
+}
+.section-3 .section-product .main-menu ul > li + li {
+  border-top: 1px dashed gray;
+}
+.section-3 .section-product .main-menu ul li {
+  position: relative;
+}
+.section-3 .section-product .main-menu ul li:hover {
+  color: black;
+  font-weight: 500;
+  padding-left: 20px;
+  padding-right: 10px;
+  background-color: #ffaf01;
+}
+.section-3 .section-product .main-menu ul li:hover > ul {
+  display: flex;
+  cursor: default;
+  overflow: hidden;
+  position: absolute;
+  min-height: 295px;
+  top: 0;
+  left: 100%;
+  background: #fff;
+  padding: 10px;
+  width: 325%;
+  font-weight: normal;
+  z-index: 99;
+  border: 1px dashed #ffaf01;
+}
+.section-3 .section-product .main-menu ul li:hover > ul > li {
+  border: none;
+}
+.section-3 .section-product .main-menu ul li:hover > ul > li > a {
+  text-decoration: none;
+}
+.section-3 .section-product .main-menu ul li:hover > ul > li:hover {
+  background: none;
+  padding: 0;
+  font-weight: normal;
+}
+.section-3 .section-product .main-menu ul li:hover > ul > li:hover a {
+  font-weight: 500;
+}
+.section-3 .section-product .main-menu ul li a {
+  display: block;
+  font-size: 14px;
+  color: #000;
+  padding-left: 27px;
+  padding-right: 15px;
+}
+.section-3 .living-product {
+  border-top: 2px solid #ffaf01;
+}
+.section-3 .living-product .tittle-tab {
+  padding: 10px 10px;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: black;
+  margin-bottom: 20px;
+}
+.section-3 .living-product .tittle-tab a {
+  margin-left: 5px;
+}
+.section-3 .living-product .tittle-tab .fa-couch {
+  color: #ffaf01;
+}
+.section-3 .living-product ul li a {
+  color: black;
+}
+.section-3 .living-product ul li .active {
+  font-weight: 400;
+  color: #ffaf01;
+}
+.section-3 .living-product ul li:hover a {
+  font-weight: 400;
+  color: #ffaf01;
+}
+.section-3 .living-product .col-lg-3 {
+  overflow: hidden;
+}
+.section-3 .living-product .col-lg-3 .card {
+  border: none;
+  transition: all 0.4s ease-in-out;
+}
+.section-3 .living-product .col-lg-3 .card .card-body {
+  position: relative;
+}
+.section-3 .living-product .col-lg-3 .card .card-body .card-text-price {
+  color: red;
+}
+.section-3 .living-product .col-lg-3 .card .card-body .card-icon {
+  visibility: hidden;
+  display: flex;
+  justify-content: space-evenly;
+  z-index: 200;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.section-3 .living-product .col-lg-3 .card .card-body .card-icon a {
+  color: #bec2c7;
+  padding: 0 20px;
+}
+.section-3 .living-product .col-lg-3 .card .card-body p {
+  text-align: center;
+}
+.section-3 .living-product .col-lg-3 .card:hover {
+  transform: scale(1.1, 1.1);
+}
+.section-3 .living-product .col-lg-3 .card:hover .card-info {
+  visibility: hidden;
+}
+.section-3 .living-product .col-lg-3 .card:hover .card-icon {
+  visibility: visible;
+}
+.section-3 .living-product .col-lg-3 .card:hover .card-icon-cart:hover,
+.section-3 .living-product .col-lg-3 .card:hover .card-icon-search:hover {
+  color: #ffaf01;
+}
+
+.section-4,
+.section-5,
+.section-6 {
+  padding: 30px 0;
+}
+.section-4 .container,
+.section-5 .container,
+.section-6 .container {
+  border-top: 2px solid #ffaf01;
+}
+.section-4 .container .tittle-tab,
+.section-5 .container .tittle-tab,
+.section-6 .container .tittle-tab {
+  padding: 10px 10px;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: black;
+  margin-bottom: 20px;
+}
+.section-4 .container .tittle-tab a,
+.section-5 .container .tittle-tab a,
+.section-6 .container .tittle-tab a {
+  margin-left: 5px;
+}
+.section-4 .container ul li a,
+.section-5 .container ul li a,
+.section-6 .container ul li a {
+  color: black;
+}
+.section-4 .container ul li .active,
+.section-5 .container ul li .active,
+.section-6 .container ul li .active {
+  font-weight: 400;
+  color: #ffaf01;
+}
+.section-4 .container ul li:hover a,
+.section-5 .container ul li:hover a,
+.section-6 .container ul li:hover a {
+  font-weight: 400;
+  color: #ffaf01;
+}
+.section-4 .container .col-lg-3,
+.section-5 .container .col-lg-3,
+.section-6 .container .col-lg-3 {
+  overflow: hidden;
+}
+.section-4 .container .col-lg-3 .card,
+.section-5 .container .col-lg-3 .card,
+.section-6 .container .col-lg-3 .card {
+  border: none;
+  transition: all 0.4s ease-in-out;
+}
+.section-4 .container .col-lg-3 .card .image,
+.section-5 .container .col-lg-3 .card .image,
+.section-6 .container .col-lg-3 .card .image {
+  object-fit: cover;
+}
+.section-4 .container .col-lg-3 .card .card-body,
+.section-5 .container .col-lg-3 .card .card-body,
+.section-6 .container .col-lg-3 .card .card-body {
+  position: relative;
+}
+.section-4 .container .col-lg-3 .card .card-body .card-text-price,
+.section-5 .container .col-lg-3 .card .card-body .card-text-price,
+.section-6 .container .col-lg-3 .card .card-body .card-text-price {
+  color: red;
+}
+.section-4 .container .col-lg-3 .card .card-body .card-icon,
+.section-5 .container .col-lg-3 .card .card-body .card-icon,
+.section-6 .container .col-lg-3 .card .card-body .card-icon {
+  visibility: hidden;
+  display: flex;
+  justify-content: space-evenly;
+  z-index: 200;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.section-4 .container .col-lg-3 .card .card-body .card-icon a,
+.section-5 .container .col-lg-3 .card .card-body .card-icon a,
+.section-6 .container .col-lg-3 .card .card-body .card-icon a {
+  color: #bec2c7;
+  padding: 0 20px;
+}
+.section-4 .container .col-lg-3 .card .card-body p,
+.section-5 .container .col-lg-3 .card .card-body p,
+.section-6 .container .col-lg-3 .card .card-body p {
+  text-align: center;
+}
+.section-4 .container .col-lg-3 .card:hover,
+.section-5 .container .col-lg-3 .card:hover,
+.section-6 .container .col-lg-3 .card:hover {
+  transform: scale(1.1, 1.1);
+}
+.section-4 .container .col-lg-3 .card:hover .card-info,
+.section-5 .container .col-lg-3 .card:hover .card-info,
+.section-6 .container .col-lg-3 .card:hover .card-info {
+  visibility: hidden;
+}
+.section-4 .container .col-lg-3 .card:hover .card-icon,
+.section-5 .container .col-lg-3 .card:hover .card-icon,
+.section-6 .container .col-lg-3 .card:hover .card-icon {
+  visibility: visible;
+}
+.section-4 .container .col-lg-3 .card:hover .card-icon-cart:hover,
+.section-4 .container .col-lg-3 .card:hover .card-icon-search:hover,
+.section-5 .container .col-lg-3 .card:hover .card-icon-cart:hover,
+.section-5 .container .col-lg-3 .card:hover .card-icon-search:hover,
+.section-6 .container .col-lg-3 .card:hover .card-icon-cart:hover,
+.section-6 .container .col-lg-3 .card:hover .card-icon-search:hover {
+  color: #ffaf01;
+}
+
+.banner-1 .center-block img {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 100%;
+}
+
+.customer-opinions {
+  padding: 30px 0;
+}
+.customer-opinions .container {
+  border-top: 2px solid #ffaf01;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+}
+.customer-opinions .container .heading .tittle-tab {
+  padding: 10px 10px;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: black;
+  margin-bottom: 20px;
+}
+.customer-opinions .container .heading > a {
+  margin-left: 5px;
+}
+.customer-opinions .container .heading .active {
+  color: #ffaf01;
+}
+.customer-opinions .container .card {
+  border-radius: 1rem;
+  box-shadow: 0px -10px 0px #ffaf01;
+}
+@media (max-width: 767px) {
+  .customer-opinions .container .card {
+    margin: 1rem 0.7rem 1rem;
+    max-width: 80vw;
+  }
+}
+.customer-opinions .container img {
+  width: 6.2rem;
+  border-radius: 5rem;
+  margin: 1.3rem auto 1rem auto;
+}
+.customer-opinions .container .col-md-4 {
+  padding: 0 0.5rem;
+}
+.customer-opinions .container .card-text {
+  text-align: center;
+  padding: 1rem 2rem;
+  font-size: 0.8rem;
+  color: rgb(82, 81, 81);
+  line-height: 1.4rem;
+}
+.customer-opinions .container .footer {
+  border-top: none;
+  text-align: center;
+  line-height: 1.2rem;
+  padding: 10px;
+}
+.customer-opinions .container .footer a {
+  color: #ffaf01;
+  font-weight: bold;
+}
+.customer-opinions .container .footer a:hover {
+  color: #ffaf01;
+}
+.customer-opinions .container #name {
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+.customer-opinions .container #position {
+  font-size: 0.7rem;
+}
+
+/* ============ Article ============ */
+article {
+  padding: 30px 0;
+}
+article .container {
+  border-top: 2px solid #ffaf01;
+}
+article .container .active {
+  color: #ffaf01;
+}
+article .container .tittle-tab {
+  padding: 10px 10px;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: black;
+  margin-bottom: 20px;
+}
+article .container .tittle-tab a {
+  margin-left: 5px;
+}
+article .section-content .container {
+  border: none;
+}
+article .section-content .section-cards {
+  z-index: 3;
+  position: relative;
+}
+article .section-content .card-background {
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+}
+article .section-content .card-background .table {
+  position: relative;
+  z-index: 2;
+  min-height: 280px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  max-width: 440px;
+  margin: 0 auto;
+}
+article .section-content .card-background .table a {
+  text-decoration: none;
+}
+article .section-content .card-background .category,
+article .section-content .card-background .card-description,
+article .section-content .card-background .small {
+  color: rgba(255, 255, 255, 0.8);
+}
+article .section-content .card-background .card-description {
+  height: 200px;
+  width: 100%;
+  overflow: auto;
+}
+article .section-content .card-background .card-caption {
+  color: #ffffff;
+  margin-top: 10px;
+}
+article .section-content .card-background::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(43, 42, 42) 35%, rgb(90, 90, 90) 100%);
+  background-size: cover;
+  opacity: 0.5;
+}
+article .section-content .card-background:after {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  display: block;
+  left: 0;
+  top: 0;
+  table: "";
+  background-color: rgba(0, 0, 0, 0.56);
+  border-radius: 6px;
+}
+
+@media (min-width: 992px) {
+  .section-3 .living-product {
+    border-top: 2px solid #ffaf01;
+  }
+  .section-3 .living-product ul {
+    justify-content: end;
+  }
+  .section-3 .living-product .col-lg-3 .card {
+    border: none;
+    width: 15rem;
+    transition: all 0.4s ease-in-out;
+  }
+  .section-3 .living-product .col-lg-3 .card .image {
+    width: 200px;
+    height: 200px;
+  }
+  .section-4 .col-lg-9 ul,
+.section-5 .col-lg-9 ul,
+.section-6 .col-lg-9 ul {
+    justify-content: end;
+  }
+  .section-4 .col-lg-9 .card,
+.section-5 .col-lg-9 .card,
+.section-6 .col-lg-9 .card {
+    border: none;
+    width: 20rem;
+    transition: all 0.4s ease-in-out;
+  }
+  .section-4 .col-lg-9 .card .image,
+.section-5 .col-lg-9 .card .image,
+.section-6 .col-lg-9 .card .image {
+    width: 300px;
+    height: 300px;
+  }
+}
+@media (max-width: 991.98px) {
+  .section-2 {
+    display: none;
+  }
+  .header-main {
+    display: none;
+  }
+  .section-3 {
+    display: none;
+  }
+}
 /* ==========================================================================
 Footer
 ========================================================================== */
