--- a/scss/layout/_content.scss
+++ b/scss/layout/_content.scss
@@ -4,3 +4,547 @@ Content
 .app-loading {
   display: none;
 }
+
+.fa-couch {
+  color: $colorTheme;
+}
+
+.section-2 {
+  padding: 30px 0;
+
+  .box-inner {
+    position: relative;
+
+    &:hover,
+    :active {
+      img {
+        transform: scale(1.1, 1.1);
+      }
+    }
+    .image {
+      overflow: hidden;
+      display: block;
+      transition: all 150ms ease-in-out;
+
+      img {
+        width: 100%;
+        height: 700px;
+        object-fit: cover;
+        transition: all 0.4s ease-out;
+        position: relative;
+      }
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(
+          90deg,
+          rgba(0, 0, 0, 1) 0%,
+          rgb(43, 42, 42) 35%,
+          rgb(90, 90, 90) 100%
+        );
+        background-size: cover;
+        opacity: 0.5;
+      }
+    }
+
+    .text {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      z-index: 1000;
+      color: white;
+      text-align: center;
+      padding: 0 10px;
+      transform: translate(-50%, -50%);
+
+      h5::after {
+        content: '';
+        border-bottom: 2px solid #fff;
+        display: block;
+        width: 40px;
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+  }
+}
+
+.section-3 {
+  .fa-couch {
+    color: black;
+  }
+  padding: 30px 0;
+  .section-product {
+    .main-menu {
+      .menu-title {
+        padding: 10px 10px;
+        font-weight: 500;
+        text-transform: uppercase;
+        font-size: 20px;
+        color: black;
+        background-color: $colorTheme;
+        margin-bottom: 20px;
+      }
+      ul {
+        > li + li {
+          border-top: 1px dashed gray;
+        }
+        li {
+          position: relative;
+          &:hover {
+            color: black;
+            font-weight: 500;
+            padding-left: 20px;
+            padding-right: 10px;
+            background-color: $colorTheme;
+            > ul {
+              display: flex;
+              cursor: default;
+              overflow: hidden;
+              position: absolute;
+              min-height: 295px;
+              top: 0;
+              left: 100%;
+              background: #fff;
+              padding: 10px;
+              width: 325%;
+              font-weight: normal;
+              z-index: 99;
+              border: 1px dashed $colorTheme;
+              > li {
+                border: none;
+                > a {
+                  text-decoration: none;
+                }
+                &:hover {
+                  background: none;
+                  padding: 0;
+                  font-weight: normal;
+                  a {
+                    font-weight: 500;
+                  }
+                }
+              }
+            }
+          }
+          a {
+            display: block;
+            font-size: 14px;
+            color: #000;
+            padding-left: 27px;
+            padding-right: 15px;
+          }
+        }
+      }
+    }
+  }
+  .living-product {
+    border-top: 2px solid $colorTheme;
+
+    .tittle-tab {
+      padding: 10px 10px;
+      font-weight: 500;
+      text-transform: uppercase;
+      font-size: 20px;
+      color: black;
+      margin-bottom: 20px;
+      a {
+        margin-left: 5px;
+      }
+      .fa-couch {
+        color: $colorTheme;
+      }
+    }
+    ul {
+      li {
+        a {
+          color: black;
+        }
+        .active {
+          font-weight: 400;
+          color: $colorTheme;
+        }
+        &:hover {
+          a {
+            font-weight: 400;
+            color: $colorTheme;
+          }
+        }
+      }
+    }
+    .col-lg-3 {
+      overflow: hidden;
+
+      .card {
+        border: none;
+        // width: 15rem;
+        transition: all 0.4s ease-in-out;
+        .image {
+          // width: 200px;
+          // height: 200px;
+        }
+
+        .card-body {
+          position: relative;
+          .card-text-price {
+            color: red;
+          }
+          .card-icon {
+            visibility: hidden;
+            display: flex;
+            justify-content: space-evenly;
+            z-index: 200;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            a {
+              color: #bec2c7;
+              padding: 0 20px;
+            }
+          }
+          p {
+            text-align: center;
+          }
+        }
+        &:hover {
+          transform: scale(1.1, 1.1);
+          .card-info {
+            visibility: hidden;
+          }
+          .card-icon {
+            visibility: visible;
+          }
+          .card-icon-cart:hover,
+          .card-icon-search:hover {
+            color: $colorTheme;
+          }
+        }
+      }
+    }
+  }
+}
+
+.section-4,
+.section-5,
+.section-6 {
+  padding: 30px 0;
+  .container {
+    border-top: 2px solid $colorTheme;
+
+    .tittle-tab {
+      padding: 10px 10px;
+      font-weight: 500;
+      text-transform: uppercase;
+      font-size: 20px;
+      color: black;
+      margin-bottom: 20px;
+      a {
+        margin-left: 5px;
+      }
+    }
+    ul {
+      li {
+        a {
+          color: black;
+        }
+        .active {
+          font-weight: 400;
+          color: $colorTheme;
+        }
+        &:hover {
+          a {
+            font-weight: 400;
+            color: $colorTheme;
+          }
+        }
+      }
+    }
+    .col-lg-3 {
+      overflow: hidden;
+
+      .card {
+        border: none;
+        // width: 20rem;
+        transition: all 0.4s ease-in-out;
+        .image {
+          object-fit: cover;
+        }
+        .card-body {
+          position: relative;
+          .card-text-price {
+            color: red;
+          }
+          .card-icon {
+            visibility: hidden;
+            display: flex;
+            justify-content: space-evenly;
+            z-index: 200;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            a {
+              color: #bec2c7;
+              padding: 0 20px;
+            }
+          }
+          p {
+            text-align: center;
+          }
+        }
+        &:hover {
+          transform: scale(1.1, 1.1);
+          .card-info {
+            visibility: hidden;
+          }
+          .card-icon {
+            visibility: visible;
+          }
+          .card-icon-cart:hover,
+          .card-icon-search:hover {
+            color: $colorTheme;
+          }
+        }
+      }
+    }
+  }
+}
+
+.banner-1 {
+  .center-block {
+    img {
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+      max-width: 100%;
+    }
+  }
+}
+
+.customer-opinions {
+  padding: 30px 0;
+  .container {
+    border-top: 2px solid $colorTheme;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    .heading {
+      .tittle-tab {
+        padding: 10px 10px;
+        font-weight: 500;
+        text-transform: uppercase;
+        font-size: 20px;
+        color: black;
+        margin-bottom: 20px;
+      }
+      > a {
+        margin-left: 5px;
+      }
+      .active {
+        color: $colorTheme;
+      }
+    }
+
+    .card {
+      border-radius: 1rem;
+      box-shadow: 0px -10px 0px $colorTheme;
+    }
+    @media (max-width: 767px) {
+      .card {
+        margin: 1rem 0.7rem 1rem;
+        max-width: 80vw;
+      }
+    }
+    img {
+      width: 6.2rem;
+      border-radius: 5rem;
+      margin: 1.3rem auto 1rem auto;
+    }
+    .col-md-4 {
+      padding: 0 0.5rem;
+    }
+    .card-text {
+      text-align: center;
+      padding: 1rem 2rem;
+      font-size: 0.8rem;
+      color: rgb(82, 81, 81);
+      line-height: 1.4rem;
+    }
+    .footer {
+      border-top: none;
+      text-align: center;
+      line-height: 1.2rem;
+      padding: 10px;
+      a {
+        color: $colorTheme;
+        font-weight: bold;
+      }
+      a:hover {
+        color: $colorTheme;
+      }
+    }
+    #name {
+      font-size: 0.8rem;
+      font-weight: bold;
+    }
+    #position {
+      font-size: 0.7rem;
+    }
+  }
+}
+
+/* ============ Article ============ */
+article {
+  padding: 30px 0;
+  .container {
+    border-top: 2px solid $colorTheme;
+    .active {
+      color: $colorTheme;
+    }
+
+    .tittle-tab {
+      padding: 10px 10px;
+      font-weight: 500;
+      text-transform: uppercase;
+      font-size: 20px;
+      color: black;
+      margin-bottom: 20px;
+      a {
+        margin-left: 5px;
+      }
+    }
+  }
+  .section-content {
+    .container {
+      border: none;
+    }
+    .section-cards {
+      z-index: 3;
+      position: relative;
+    }
+
+    .card-background {
+      background-position: center;
+      background-size: cover;
+      text-align: center;
+      .table {
+        position: relative;
+        z-index: 2;
+        min-height: 280px;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        max-width: 440px;
+        margin: 0 auto;
+        a {
+          text-decoration: none;
+        }
+      }
+      .category,
+      .card-description,
+      .small {
+        color: rgba(255, 255, 255, 0.8);
+      }
+      .card-description {
+        height: 200px;
+        width: 100%;
+        overflow: auto;
+      }
+    }
+
+    .card-background {
+      .card-caption {
+        color: #ffffff;
+        margin-top: 10px;
+      }
+      &::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(
+          90deg,
+          rgba(0, 0, 0, 1) 0%,
+          rgb(43, 42, 42) 35%,
+          rgb(90, 90, 90) 100%
+        );
+        background-size: cover;
+        opacity: 0.5;
+      }
+    }
+
+    .card-background:after {
+      position: absolute;
+      z-index: 2;
+      width: 100%;
+      height: 100%;
+      display: block;
+      left: 0;
+      top: 0;
+      table: '';
+      background-color: rgba(0, 0, 0, 0.56);
+      border-radius: 6px;
+    }
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .section-3 {
+    .living-product {
+      border-top: 2px solid $colorTheme;
+      ul {
+        justify-content: end;
+      }
+
+      .col-lg-3 {
+        .card {
+          border: none;
+          width: 15rem;
+          transition: all 0.4s ease-in-out;
+          .image {
+            width: 200px;
+            height: 200px;
+          }
+        }
+      }
+    }
+  }
+  .section-4,
+  .section-5,
+  .section-6 {
+    .col-lg-9 {
+      ul {
+        justify-content: end;
+      }
+      .card {
+        border: none;
+        width: 20rem;
+        transition: all 0.4s ease-in-out;
+        .image {
+          width: 300px;
+          height: 300px;
+        }
+      }
+    }
+  }
+}
+
+@include media-breakpoint-down(lg) {
+  .section-2 {
+    display: none;
+  }
+  .header-main {
+    display: none;
+  }
+
+  .section-3 {
+    display: none;
+  }
+}
